# m8_r36s_tools

./: Enable Remote Services.sh  dependencies.md  gamecontrollers.c  m8_go.sh  readme.md
ArkOS_image/: location.md
Custom emulationstation theme/: es_systems.cfg
MovieCast/: CMakeLists.txt  MovieCast.exec  r36s_hls_player.c  r36s_hls_player_RLpage.c  r36s_hls_player_scroll.c  readme.md  server5.py
ff_menu/: CMakeLists.txt  Melbourne_TV.exec  channelsTV.json  ff.c  readme.md  stream.md  stream.sh
ff_radio/: CMakeLists.txt  channelsRadio.json  ffrad.c
m8/: M8SliceGlitch.exec  MergeSlicePy.exec  SampleBrowser.exec  Saved2SD.exec  kit2SD.exec  readme.md
m8/Kit2SD/: CMakeLists.txt  readme.md  send.c
m8/M8SliceGlitch/: CMakeLists.txt  readme.md  sdl_file_select.c
m8/M8sliceGlitchTerminal/: CMakeLists.txt  list_select_download.c
m8/MergeSlicePy/: .ninja_deps  .ninja_log  CMakeLists.txt  merge_wav_name.py  pymerge.c  readme.md
m8/MergeSlicePy/archive/pymerge/: CMakeLists.txt  pymerge.c
m8/SampleBrowser/: CMakeLists.txt  CMakeLists_bak.txt  file_browser.c  file_browser_bak.c  file_browser_baknew.c  readme.md
m8/SampleBrowser/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  file_browser  rules.ninja
m8/Saved2SD/: CMakeLists.txt  readme.md  sendsaved.c
m8/USBconnectTest/: .ninja_deps  .ninja_log  CMakeLists.txt  readme.md  usb_test.c
m8/backupSavesRenders/: CMakeLists.txt  backup.c  readme.md
scripts/: mount_roms2.sh  readme.md  refresh.sh  unmount_USB.sh
